--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="msg-container hide">
+    <div id="msg-container hide">
       <p id="msg">Winner</p>
       <button id="new-btn">New Game</button>
     </div>
